adding a docker push to ecr step

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 }
 
 task buildDocker(type: Docker, dependsOn: build) {
-	push = true
+	push = false
 	applicationName = jar.baseName
 	dockerfile = file('src/main/docker/Dockerfile')
 	doFirst {
